added new endpoints, achievement table, seeds
