# app/Http/Controllers/ProgramController.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers;
 
 use App\Models\Program;
+use App\Models\ProgramRequest;
 use App\Services\TranslateService;
 use Illuminate\Http\Request;
 
@@ -52,78 +53,68 @@ class ProgramController extends Controller
      *     )
      * )
      */
-  public function index($locale = null)
-  {
+    public function index($locale = null)
+    {
     $programs = $this->translate_service->translate($locale, Program::orderByDesc('created_at')->get(), Program::class)
                                         ->toArray();
 
     return json_encode(compact('programs'));
 
-  }
+    }
 
-  /**
-   * Show the form for creating a new resource.
-   *
-   * @return Response
-   */
-  public function create()
-  {
 
-  }
+    /**
+     * @OA\Post(
+     *     path="/api/program/request",
+     *     description="Create program request",
+     *     tags={"program"},
+     *     summary="Program Page",
+     *
+     *      @OA\RequestBody(
+     *       required=true,
+     *       description="Pass params",
+     *       @OA\JsonContent(
+     *          required={"program_id", "name", "phone", "email"},
+     *          @OA\Property(property="program_id", type="string",  example="1"),
+     *          @OA\Property(property="name", type="string", format="string", example="Arsen"),
+     *          @OA\Property(property="phone", type="string", example="380645564545"),
+     *          @OA\Property(property="email", type="string", format="email", example="user1@mail.com"),
+     *           ),
+     *      ),
+     *
+     *     @OA\Response(
+     *          response="200",
+     *          description="success",
+     *     ),
+     *     @OA\Response(
+     *          response="403",
+     *          description="error, User with this phone or email already exist",
+     *          @OA\Property(property="phone", type="string"),
+     *          @OA\Property(property="email", type="string"),
+     *     ),
+     *
+     * )
+     */
 
-  /**
-   * Store a newly created resource in storage.
-   *
-   * @return Response
-   */
-  public function store(Request $request)
-  {
+    public function store(Request $request)
+    {
+        if (!empty(ProgramRequest::where('phone')->get())){
+            return response()->json(['error' => 'User with this phone already exist'], 401);
+        }
+        if (!empty(ProgramRequest::where('email')->get())){
+            return response()->json(['error' => 'User with this email already exist'], 401);
+        }
+        ProgramRequest::create([
+            'program_id' => $request['program_id'],
+            'name' => $request['name'],
+            'phone' => $request['phone'],
+            'email' => $request['email']
+        ]);
 
-  }
+        return response()->json(['success' => 'success'], 200);
+    }
 
-  /**
-   * Display the specified resource.
-   *
-   * @param  int  $id
-   * @return Response
-   */
-  public function show($id)
-  {
 
-  }
-
-  /**
-   * Show the form for editing the specified resource.
-   *
-   * @param  int  $id
-   * @return Response
-   */
-  public function edit($id)
-  {
-
-  }
-
-  /**
-   * Update the specified resource in storage.
-   *
-   * @param  int  $id
-   * @return Response
-   */
-  public function update($id)
-  {
-
-  }
-
-  /**
-   * Remove the specified resource from storage.
-   *
-   * @param  int  $id
-   * @return Response
-   */
-  public function destroy($id)
-  {
-
-  }
 
 }
 
