# routes/api.php
@@ -4,6 +4,7 @@ use App\Http\Controllers\BasketController;
 use App\Http\Controllers\ContactController;
 use App\Http\Controllers\NewsController;
 use App\Http\Controllers\ProductController;
+use App\Http\Controllers\ProgramController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -42,7 +43,8 @@ Route::get('/news/{locale?}', 'NewsController@index');
 Route::get('/news/{id}/{locale?}', [ NewsController::class, 'show']);
 Route::get('/services/{locale?}', 'ServiceController@index');
 Route::get('/programs/{locale?}', 'ProgramController@index');
-Route::get('contacts', [ ContactController::class, 'index']);
+Route::post('/program/request', [ ProgramController::class, 'store']);
+Route::get('/contacts', [ ContactController::class, 'index']);
 
 Route::middleware('auth:api')->get('/user', function (Request $request) {
     return $request->user();
